responsive heading size

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ article.text-box {
 
 h1 {
     display: block;
-    font-size: 100px;
+    font-size: 6.25rem;
     font-weight: normal;
     letter-spacing: 11px;
     /* line-height: 0.9em; */
